--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project3</title>
-</head>
+    <title>My Single-Page Application</title>
+    <link rel="stylesheet" href="style.css"></head>
 <body>
-    
+    <header>
+        <h1>My Single-Page Application</h1>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section id="home" class="page">
+          <h2>Welcome to my SPA!</h2>
+          <p>This is the home page.</p>
+        </section>
+        <section id="about" class="page">
+          <h2>About Us</h2>
+          <p>We are a small team of developers.</p>
+        </section>
+        <section id="contact" class="page">
+          <h2>Contact Us</h2>
+          <p>You can reach us at contact@myspa.com</p>
+        </section>
+      </main>
+      <script src="script.js"></script>
 </body>
 </html>
