--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Single-Page Application</title>
+    <title>Our recipes blog</title>
     <link rel="stylesheet" href="style.css"></head>
 <body>
   <header>
-    <h1>My Single-Page Application</h1>
+    <h1>Our recipes blog</h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -19,22 +19,16 @@
   </header>
   <main id="content">
     <template id="home-template">
-      <section id="home" class="page">
         <h2>Welcome to my SPA!</h2>
         <p>This is the home page.</p>
-      </section>
     </template>
     <template id="about-template">
-      <section id="about" class="page">
         <h2>About Us</h2>
         <p>We are a small team of developers.</p>
-      </section>
     </template>
     <template id="contact-template">
-      <section id="contact" class="page">
         <h2>Contact Us</h2>
         <p>You can reach us at contact@myspa.com</p>
-      </section>
     </template>
   </main>
     <script src="script.js"></script>
