--- a/index.html
+++ b/index.html
@@ -4,32 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our recipes blog</title>
+    <title>Yummy!</title>
     <link rel="stylesheet" href="style.css"></head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 <body>
   <header>
-    <h1>Our recipes blog</h1>
+    <a href="#Yummy"><h1 id="yummy">Yummy!</h1></a>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#Desserts">Desserts</a></li>
+        <li><a href="#Saleds">Saleds</a></li>
+        <li><a href="#MainCourses">main courses</a></li>
+        <li><a href="#MyRecipes">My recipes</a></li>
+        <li><a href="#SignIn">Sign in</a></li>
       </ul>
     </nav>
   </header>
-  <main id="content">
-    <template id="home-template">
-        <h2>Welcome to my SPA!</h2>
-        <p>This is the home page.</p>
+  <main id="home">
+    <template id="Yummy-template">
+      <section id="Yummy" class="page">
+      <h2>Welcome to my SPA!</h2>
+      <p>This is the home page.</p>
+      </section>
     </template>
-    <template id="about-template">
-        <h2>About Us</h2>
-        <p>We are a small team of developers.</p>
+    <template id="Desserts-template">
+      <section id="Desserts" class="page">
+      <h2>Welcome to my SPA!</h2>
+      <p>This is the home page.</p>
+      </section>
     </template>
-    <template id="contact-template">
+    <template id="Saleds-template">
+      <section id="Saleds" class="page">
+      <h2>About Us</h2>
+      <p>We are a small team of developers.</p>
+      </section>
+    </template>
+
+
+
+    <section>
+      <template id="MainCourses-template">
         <h2>Contact Us</h2>
         <p>You can reach us at contact@myspa.com</p>
-    </template>
+      </template>
+    </section>
+    <section>
+      <template id="MyRecipes-template">
+        <h2>Contact Us</h2>
+        <p>You can reach us at contact@myspa.com</p>
+      </template>
+    </section>
+    <section>
+      <template id="SignIn-template">
+        <h2>Contact Us</h2>
+        <p>You can reach us at contact@myspa.com</p>
+      </template>
+    </section>
   </main>
     <script src="script.js"></script>
 </body>
