contant added and images

--- a/index.html
+++ b/index.html
@@ -27,31 +27,71 @@
     <template id="Yummy-template">
       <section id="Yummy" class="page">
         <h1>Most popular this week</h1>
-        <img src="images/HamanEar.jpg" alt="אוזני המן">
-        <img src="images/cinabon.jpeg" alt="סינבון">
-        <img src="images/purimCupcake.jpeg" alt="קאפקייק לפורים">
-        <img src="images/Yeast_cake.jpeg" alt="עוגת שמרים">
-        <img src="images/Alfahors.jpeg" alt="אלפחורס">
+        <div class="image-container">
+          <div class="column">
+              <a href="Simon.html"><img src="images/hamantash.jpeg"></a>
+              <h4>אוזני המן פרג</h4>
+          </div>
+          <div class="column">
+              <a href="TheStudent.html"><img src="images/HamanEar.jpg" ></a>
+              <h4>אוזני המן שוקולד</h4>
+          </div>
+          <div class="column img__wrap">
+              <img src="images/cinabon.jpeg">
+              <h3 class="img__description">בפיתוח...</h3>
+              <h4>סינבון</h4>
+          </div>
+          <div class="column img__wrap">
+              <img src="images/purimCupcake.jpeg" >
+              <h3 class="img__description">בפיתוח...</h3>
+              <h4>קאפקייק לפורים</h4>
+          </div>
+          <div class="column img__wrap">
+              <img src="images/Alfahors.jpeg">
+              <h3 class="img__description">בפיתוח...</h3>
+              <h4>אלפחורס</h4>
+          </div>          
+        </div>
       </section>
     </template>
 
     <template id="Desserts-template">
       <section id="Desserts" class="page">
         <h2>Welcome to desserts page</h2>
-        <p>This is the desserts page.</p>
+        <div class="image-container">
+          <img src="images/cheesecake.jpeg">
+          <img src="images/brownies.jpeg">
+          <img src="images/chocolatechipCookies.jpeg">
+          <img src="images/choros.jpeg">
+          <img src="images/Yeast_cake.jpeg">
+        </div>
+        
       </section>
     </template>
 
     <template id="Saleds-template">
       <section id="Saleds" class="page">
         <h2>Welcome to saleds page</h2>
-        <p>This is the saleds page.</p>
+        <div class="image-container">
+          <img src="images/salads/salad1.jpeg">
+          <img src="images/salads/salad2.jpeg">
+          <img src="images/salads/salad3.jpeg">
+          <img src="images/salads/salad4.jpeg">
+          <img src="images/salads/salad5.jpeg">
+        </div>
       </section>
     </template>
 
     <template id="MainCourses-template">
       <section id="MainCourses" class="page">
-        <h2>bla bla</h2>
+        <div class="image-container">
+          <img src="images/main courses/main1.jpeg">
+          <img src="images/main courses/main2.jpeg">
+          <img src="images/main courses/main3.jpeg">
+          <img src="images/main courses/main4.jpeg">
+          <img src="images/main courses/main5.jpeg">
+          
+        </div>
       </section>
     </template>
   
