more contant images

--- a/index.html
+++ b/index.html
@@ -28,29 +28,38 @@
       <section id="Yummy" class="page">
         <h1>Most popular this week</h1>
         <div class="image-container">
-          <div class="column">
-              <a href="Simon.html"><img src="images/hamantash.jpeg"></a>
+          <div class="column img__wrap">
+            <a href="Simon.html"><img src="images/hamantash.jpeg"></a>
               <h4>אוזני המן פרג</h4>
           </div>
-          <div class="column">
-              <a href="TheStudent.html"><img src="images/HamanEar.jpg" ></a>
+          <div class="column img__wrap">
+            <a href="TheStudent.html"><img src="images/HamanEar.jpg" ></a>
               <h4>אוזני המן שוקולד</h4>
           </div>
           <div class="column img__wrap">
               <img src="images/cinabon.jpeg">
-              <h3 class="img__description">בפיתוח...</h3>
               <h4>סינבון</h4>
           </div>
           <div class="column img__wrap">
               <img src="images/purimCupcake.jpeg" >
-              <h3 class="img__description">בפיתוח...</h3>
               <h4>קאפקייק לפורים</h4>
           </div>
           <div class="column img__wrap">
               <img src="images/Alfahors.jpeg">
-              <h3 class="img__description">בפיתוח...</h3>
               <h4>אלפחורס</h4>
-          </div>          
+          </div>     
+          <div class="column img__wrap">
+            <img src="images/Alfahors.jpeg">
+            <h4>אלפחורס</h4>
+        </div>      
+        <div class="column img__wrap">
+          <img src="images/Alfahors.jpeg">
+          <h4>אלפחורס</h4>
+      </div>      
+      <div class="column img__wrap">
+        <img src="images/Alfahors.jpeg">
+        <h4>אלפחורס</h4>
+    </div>           
         </div>
       </section>
     </template>
@@ -64,6 +73,10 @@
           <img src="images/chocolatechipCookies.jpeg">
           <img src="images/choros.jpeg">
           <img src="images/Yeast_cake.jpeg">
+          <img src="images/desserts/download.jpg">
+          <img src="images/desserts/brule.jpg">
+          <img src="images/desserts/sufle.jpg">
+
         </div>
         
       </section>
@@ -78,6 +91,10 @@
           <img src="images/salads/salad3.jpeg">
           <img src="images/salads/salad4.jpeg">
           <img src="images/salads/salad5.jpeg">
+          <img src="images/salads/salad6.jpg">
+          <img src="images/salads/salad7.jpg">
+          <img src="images/salads/salad8.jpg">
+
         </div>
       </section>
     </template>
@@ -90,7 +107,9 @@
           <img src="images/main courses/main3.jpeg">
           <img src="images/main courses/main4.jpeg">
           <img src="images/main courses/main5.jpeg">
-          
+          <img src="images/main courses/main6.jpg">
+          <img src="images/main courses/main7.jpg">
+          <img src="images/main courses/main8.jpg">          
         </div>
       </section>
     </template>
