--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <h1>Most popular this week</h1>
         <div class="image-container">
           <div class="column img__wrap">
-            <a href="Simon.html"><img src="images/hamantash.jpeg"></a>
+              <img src="images/hamantash.jpeg">
               <h4>אוזני המן פרג</h4>
           </div>
           <div class="column img__wrap">
-            <a href="TheStudent.html"><img src="images/HamanEar.jpg" ></a>
+              <img src="images/HamanEar.jpg" >
               <h4>אוזני המן שוקולד</h4>
           </div>
           <div class="column img__wrap">
