--- a/index.html
+++ b/index.html
@@ -30,35 +30,32 @@
         <div class="image-container">
           <div class="column img__wrap">
               <img src="images/hamantash.jpeg">
-              <h4>אוזני המן פרג</h4>
+              <p class="text">Hamantaschen</p>
           </div>
           <div class="column img__wrap">
               <img src="images/HamanEar.jpg" >
-              <h4>אוזני המן שוקולד</h4>
+              <p class="text">Chocolate hamantaschen</p>
           </div>
           <div class="column img__wrap">
               <img src="images/cinabon.jpeg">
-              <h4>סינבון</h4>
+              <p class="text">Cinamon roll</p>
           </div>
           <div class="column img__wrap">
               <img src="images/purimCupcake.jpeg" >
-              <h4>קאפקייק לפורים</h4>
+              <p class="text">Purim cupcake</p>
           </div>
           <div class="column img__wrap">
               <img src="images/Alfahors.jpeg">
-              <h4>אלפחורס</h4>
+              <p class="text">Alfahors</p>
           </div>     
           <div class="column img__wrap">
             <img src="images/Alfahors.jpeg">
-            <h4>אלפחורס</h4>
         </div>      
         <div class="column img__wrap">
           <img src="images/Alfahors.jpeg">
-          <h4>אלפחורס</h4>
       </div>      
       <div class="column img__wrap">
         <img src="images/Alfahors.jpeg">
-        <h4>אלפחורס</h4>
     </div>           
         </div>
       </section>
