favorite button beginning

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="image-container">
           <div class="column img__wrap">
               <img src="images/hamantash.jpeg">
+              <button id="favorite-button">
+                
+              </button>
               <p class="text">Hamantaschen</p>
           </div>
           <div class="column img__wrap">
