--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               <p class="text">Hamantaschen</p>
           </div>
           <div class="column img__wrap">
-              <img src="images/HamanEar.jpg" >
+              <img src="images/GarlicParmesanPotatoes.jpg" >
               <button id="favorite-button">Add to favorite</button>
-              <p class="text">Chocolate hamantaschen</p>
+              <p class="text">Roasted Garlic Parmesan Potatoes</p>
           </div>
           <div class="column img__wrap">
               <img src="images/cinabon.jpeg">
@@ -62,14 +62,10 @@
               <p class="text">Alfahors</p>
           </div>     
           <div class="column img__wrap">
-            <img src="images/Alfahors.jpeg">
-        </div>      
-        <div class="column img__wrap">
-          <img src="images/Alfahors.jpeg">
-      </div>      
-      <div class="column img__wrap">
-        <img src="images/Alfahors.jpeg">
-    </div>           
+            <img src="images/GarlicParmPasta.jpg">
+            <button id="favorite-button">Add to favorite</button>
+            <p class="text"> Garlic Parmesan Pasta</p>
+        </div>    
         </div>
       </section>
     </template>
