--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="image-container">
           <div class="column img__wrap">
               <img src="images/hamantash.jpeg">
-              <button id="favorite-button">Add to favorite</button>
+              <button id="favorite-button" onclick="addRecipe()">Add to favorite</button>
               <p class="text">Hamantaschen</p>
           </div>
           <div class="column img__wrap">
