Yummy header dir ltr

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <a href="#Yummy"><h1 id="YummyH1">Yummy!</h1></a>
+    <a href="#Yummy"><h1 id="YummyH1" dir="ltr">Yummy!</h1></a>
     <nav>
       <ul>
         <li><a href="#Desserts">Desserts</a></li>
